# team5_78_duqiao

lession3/substrate-node-template/pallets/substrate-kitties/: Cargo.toml  README.md  expanded.rs
lession3/substrate-node-template/pallets/substrate-kitties/src/: main.rs
lession3/substrate-node-template/runtime/src/: linked_item.rs
lession4/assagnment/: Cargo.toml
lession4/assagnment/src/: lib.rs
lession5/substrate-erc20/pallets/erc20/: Cargo.toml
lession5/substrate-erc20/pallets/erc20/src/: lib.rs
lession5/substrate-erc20/runtime/src/: lib.rs
lession6/benchmark-node-template/: README.md
lession6/benchmark-node-template/pallets/benchmark-demo/src/: lib.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/substrate-kitties/runtime/: Cargo.toml
pallets/substrate-kitties/runtime/src/: kitties.rs
pallets/substrate-kitties/runtime/wasm/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
