[package]
name = "pallet-ocw-demo"
version = "2.0.1"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = "https://github.com/substrate-developer-hub/recipes/"
description = "A pallet that demonstrates many aspects of offchain workers"
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
parking_lot = "0.10.0"
serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
serde_json = { package = "alt_serde_json", version = "1", default-features = false, features = ["alloc"] }

# Substrate packages

frame-support = { version = '2.0.0', default-features = false,path = "../../../../frame/support" }
frame-system = { version = '2.0.0', default-features = false,path = "../../../../frame/system" }
sp-core = { version = '2.0.0', default-features = false,path = "../../../../primitives/core" }
sp-io = { version = '2.0.0', default-features = false,path = "../../../../primitives/io" }
sp-runtime = { version = '2.0.0', default-features = false,path = "../../../../primitives/runtime" }
sp-std = {version = '2.0.0', default-features = false, path = "../../../../primitives/std"}


[features]
default = ['std']
std = [
  'frame-support/std',
  'frame-system/std',
  'parity-scale-codec/std',
  'sp-io/std',
  'sp-runtime/std',
  'sp-std/std',
]

