[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-kitties-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.substrate-kitties-runtime]
default-features = false
path = '..'

[workspace]
members = []

[features]
default = []
std = ['substrate-kitties-runtime/std']
